@@ -510,6 +510,7 @@ abstract class CActiveRecord extends CModel
 			$model=self::$_models[$className]=new $className(null);
 			$model->isNewRecord=false;
 			$model->_md=new CActiveRecordMetaData($model);
+			$model->attachBehaviors($model->behaviors());
 			return $model;
 		}
 	}
@@ -967,6 +968,16 @@ abstract class CActiveRecord extends CModel
 	{
 		$this->attachBehaviors($this->behaviors());
 		$this->onAfterFind(new CEvent($this));
+	}
+
+	/**
+	 * Calls {@link afterFind}.
+	 * This method is internally used.
+	 * @since 1.0.3
+	 */
+	public function afterFindInternal()
+	{
+		$this->afterFind();
 	}
 
 	/**
@@ -1435,10 +1446,12 @@ abstract class CActiveRecord extends CModel
 	 * Creates an active record with the given attributes.
 	 * This method is internally used by the find methods.
 	 * @param array attribute values (column name=>column value)
+	 * @param boolean whether to call {@link afterFind} after the record is populated.
+	 * This parameter is added in version 1.0.3.
 	 * @return CActiveRecord the newly created active record. The class of the object is the same as the model class.
 	 * Null is returned if the input data is false.
 	 */
-	public function populateRecord($attributes)
+	public function populateRecord($attributes,$callAfterFind=true)
 	{
 		if($attributes!==false)
 		{
@@ -1452,7 +1465,8 @@ abstract class CActiveRecord extends CModel
 				else if(isset($record->_md->columns[$name]))
 					$record->_attributes[$name]=$value;
 			}
-			$record->afterFind();
+			if($callAfterFind)
+				$record->afterFind();
 			return $record;
 		}
 		else
@@ -1463,9 +1477,11 @@ abstract class CActiveRecord extends CModel
 	 * Creates a list of active records based on the input data.
 	 * This method is internally used by the find methods.
 	 * @param array list of attribute values for the active records.
+	 * @param boolean whether to call {@link afterFind} after each record is populated.
+	 * This parameter is added in version 1.0.3.
 	 * @return array list of active records.
 	 */
-	public function populateRecords($data)
+	public function populateRecords($data,$callAfterFind=true)
 	{
 		$records=array();
 		$md=$this->getMetaData();
@@ -1482,7 +1498,8 @@ abstract class CActiveRecord extends CModel
 				else if(isset($record->_md->columns[$name]))
 					$record->_attributes[$name]=$value;
 			}
-			$record->afterFind();
+			if($callAfterFind)
+				$record->afterFind();
 			$records[]=$record;
 		}
 		return $records;
